--- a/README
+++ b/README
@@ -43,3 +43,24 @@ Step 2:
 bin/magento setup:upgrade --keep-generated
 bin/magento setup:static-content:deploy
 bin/magento cache:clean
+
+
+usefull magento cli commands
+***************************
+
+run semknox cronjob only:
+php bin/magento cron:run --group=semknox_productsearch
+
+compile without memory limit:
+php bin/magento -d memory_limit=-1 setup:di:compile
+
+empty cache:
+php bin/magento c:c
+
+disable cache
+php bin/magento cache:disable
+
+Fix for elasticsearch low Diskspace error:
+curl -XPUT -H "Content-Type: application/json" http://localhost:9200/_cluster/settings -d '{ "transient": { "cluster.routing.allocation.disk.threshold_enabled": false } }'
+curl -XPUT -H "Content-Type: application/json" http://localhost:9200/_all/_settings -d '{"index.blocks.read_only_allow_delete": null}'
+// source: https://stackoverflow.com/questions/50609417/elasticsearch-error-cluster-block-exception-forbidden-12-index-read-only-all
